--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="submit" id="btn" value="Ajouter">
     </form>
 
-    <div id="nosTache">Aucun tache en cours....</div>
+    <div id="nosTache"  class="fs-3">Aucun tache en cours....</div>
     
     <ol id="list" class="py-3 fs-3 "></ol>
 
